gcc/testsuite/rust/rustc/ui/parser/missing-fn-issue-125446_dg.rs
whoops() {}
// { dg-error "" "" { target *-*-* } .-1 }
// { help "" "" { target *-*-* } .-2 }

fn main() {
    whoops();
}

